Renamed internal variables

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             }
         ]);
 
-        builder.add(text);
-        
+        builder.add(new Column());
+
     </script>
 </body>
 </html>
