Added Input control class

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             }
         ]);
 
-        builder.add(new Column());
+        builder.add(new Input('givenName'));
+        builder.add(new Input('familyName'));
 
     </script>
 </body>
