Added TextBox control as first Input object

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             }
         ]);
 
-        builder.add(new Input('givenName'));
-        builder.add(new Input('familyName'));
+        builder.add(new TextBox('givenName'));
+        builder.add(new TextBox('familyName'));
 
     </script>
 </body>
