Overload to ArrayList.find() method.  Now, the function search by 'name' attribute by default

--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
             }
         ]);
 
+        builder.add(new Page('Page 1'));
+
+        console.log(builder.form.page('Page 1'));
+
         builder.add(new TextBox('givenName'));
         builder.add(new TextBox('familyName'));
+
+        
 
     </script>
 </body>
