--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
 
         builder.add(new Page('Page 1'));
 
-        console.log(builder.form.page('Page 1'));
+        builder.add(new Section('Section 1'));
+        builder.add(new Section('Section 2'));
+
+        builder.add(new Page('Page 2'));
+
+        builder.form.page(1).add(new Section('Section 3'));
+        builder.form.page(1).add(new Section('Section 4'));
 
         builder.add(new TextBox('givenName'));
         builder.add(new TextBox('familyName'));
