Added code enhancement

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
         builder.toolbox.add(new Control('TextBox', [
             {
+                maxValue: 1234,
                 name: 'maxLength', 
                 type: 'Integer'
             },
