Added shortcut function builder.page -> builder.form.page

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         builder.add(new Page('Page 2'));
 
-        builder.form.page(1).add(new Section('Section 3'));
-        builder.form.page(1).add(new Section('Section 4'));
+        builder.page(1).add(new Section('Section 3'));
+        builder.page(1).add(new Section('Section 4'));
 
         builder.add(new TextBox('givenName'));
         builder.add(new TextBox('familyName'));
