--- a/index.html
+++ b/index.html
@@ -2,19 +2,43 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="dist/css/builder.css">
 </head>
 <body>
-    <form>
-        <page name="Page 1">
-        </page>
+    <div id="builder">
+        <ol id="toolbox">
+            <li class="ctrl" data-class="Page"></li>
+            <li class="ctrl" data-class="Section"></li>
+            <li class="ctrl" data-class="Subsection"></li>
+            <li class="ctrl" data-class="Row"></li>
+            <li class="ctrl" data-class="Column"></li>
+            <li class="ctrl" data-class="TextBox"></li>
+        </ol>
 
-        <page name="Page 2">
-        </page>
-    </form>
+        <ol class="properties text-box" data-obj="givenName">
+            <li class="prop">
+                <input name="name">
+            </li>
+            <li class="prop">
+                <input name="type">
+            </li>
+        </ol>
 
-    <script type="text/javascript" src="src/builder.js"></script>
-    <script type="text/javascript">
-        $('form').builder();
-    </script>
+        <form>
+            <div class="page">
+                <div class="col">
+                    <section>
+                        <fieldset class="sub">
+                            <div class="row">
+                                <div class="col">
+                                    <input class="io text-box" id="givenName" name="givenName" type="text">
+                                </div>
+                            </div>
+                        </fieldset>
+                    </section>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
