Added a wrapper to Input fields to proper css styling

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
         </ol>
 
         <form>
-            <div class="page">
-                <div class="col">
-                    <section>
-                        <fieldset class="sub">
-                            <div class="row">
-                                <div class="col">
-                                    <input class="io text-box" id="givenName" name="givenName" type="text">
+            <div class="ctrl page">
+                <div class="ctrl col">
+                    <section class="ctrl">
+                        <fieldset class="ctrl sub">
+                            <div class="ctrl row">
+                                <div class="ctrl col">
+                                    <div class="ctrl io text-box">
+                                        <input id="givenName" name="givenName" type="text">
+                                    </div>
                                 </div>
                             </div>
                         </fieldset>
